--- a/web/index.html
+++ b/web/index.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Extentions</title>
+    <title>Extensions</title>
     <link href="style.css" rel="stylesheet">
 </head>
 <body>
     <aside>
         <form>
-            <input id="path" type="text" value="/home/sharpvik/Projects/extentions">
+            <input id="path" type="text" value="/home/sharpvik/Projects/extensions">
 
             <div class="menu-bar">
                 <div id="r" class="switch switch-on">
